Alignment corrections.

--- a/website/src/app/home/home.component.scss
+++ b/website/src/app/home/home.component.scss
@@ -26,7 +26,8 @@
       flex: 1 1 30%;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-end;
+      padding-right: 10px;
     }
     .quote{
       height: 350px;
