--- a/website/src/app/portfolio/portfolio.component.scss
+++ b/website/src/app/portfolio/portfolio.component.scss
@@ -3,7 +3,7 @@
   .images-container{
     width: auto;
     padding: 5px;
-    height: 650px !important;
+    height: 100%!important;
     overflow-y: scroll;
     .image-tile{
       img{
