--- a/website/src/app/work/vertical-timeline/vertical-timeline.component.scss
+++ b/website/src/app/work/vertical-timeline/vertical-timeline.component.scss
@@ -1,5 +1,6 @@
 @import "../../../assets/variables";
 .time-line-container{
+  padding: 3% 0;
   height: 650px;
   overflow-y: scroll;
   display: flex;
